# doto

./: .actrc  .gitignore  .mypy.ini  .ruff.toml  .yamllint  Dockerfile  Makefile  README.md  doto  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  initializeCommand.sh  onCreateCommand.sh  postCreateCommand.sh  postStartCommand.sh
.github/workflows/: ci.yml  docker.yml  on_push.yml
ansible/: ansible.cfg  default.config  default.config.yml  main.yml  requirements.yml  user.yml  user_space.yml
ansible/molecule/Docker/: Dockerfile
ansible/molecule/default/: converge.yml  create.yml  molecule.yml  prepare.yml  verify.yml
ansible/molecule/vagrant/: converge.yml  molecule.yml
ansible/roles/pwlesssudo/defaults/: main.yml
ansible/roles/pwlesssudo/handlers/: main.yml
ansible/roles/pwlesssudo/meta/: main.yml
ansible/roles/pwlesssudo/molecule/default/: converge.yml  molecule.yml
ansible/roles/pwlesssudo/tasks/: main.yml
ansible/roles/pwlesssudo/tests/: test.yml
ansible/roles/pwlesssudo/vars/: main.yml
ansible/tasks/: extra-packages.yml  whoami.yml
src/doto/: __main__.py  cli.py  doto.py
src/doto/package_manager/: _apt.py
tasks/: __init__.py  docker.py  python.py
tests/: test_apt.py  test_doto.py
