[project]
name = "doto"
version = "0.1.0"
description = "Package Manager Utility"
authors = [
    {name = "Timur Yigit",email = "timur@tigitlabs.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
invoke = "^2.2.0"
mkdocs = "^1.6.1"
ruff = "^0.12.4"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
